# flatmates

./: LICENSE  README.md  pyproject.toml
scripts/: build.sh  colours.sh
src/flatmates/: extract.py  rooms.py  test.ipynb  ttt.py
src/housesearch/: rooms.py  test.ipynb
src/housesearch/flatmates/: open.py
