[project]
name = "flatmates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "pandas>=2.2.3",
    "pydantic>=2.10.1",
    "requests>=2.32.3",
    "selenium>=4.26.1",
]

[tool.uv.workspace]
members = ["flatmates"]
